--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -604,7 +604,7 @@ summary::-webkit-details-marker {
     padding-inline-start: 121px; } }
 
 .game_landing__container__newsletter {
-  background-image: url("../images/status.png"), url("../images/mayan-raul-osorio-totem.png");
+  background-image: url("../images/bg-news-letter-gradient.png"), url("../images/mayan-raul-osorio-totem.png");
   background-repeat: no-repeat;
   background-size: 270px;
   background-position-x: calc((230 / 2) * -1px);
@@ -631,12 +631,12 @@ summary::-webkit-details-marker {
 
 .game_landing__container__newsletter__div__email_input {
   background: rgba(255, 255, 255, 0.08);
-  border-radius: 3px;
   padding-block-end: 15px;
   padding-block-start: 11px;
   color: #FFB548;
   margin-block-end: 20px;
-  width: -webkit-fill-available; }
+  width: -webkit-fill-available;
+  border-radius: 5px; }
 
 .game_landing__container__newsletter__div__subscribe_button {
   background: linear-gradient(194.68deg, #FFB548 11.27%, #F3AF34 90.4%);
@@ -649,6 +649,34 @@ summary::-webkit-details-marker {
   line-height: 19px;
   text-align: center;
   color: #1A1917; }
+
+@media (min-width: 1200px) {
+  .game_landing__container__newsletter {
+    background-image: url("../images/status.png"), url("../images/mayan-raul-osorio-totem.png");
+    background-repeat: no-repeat;
+    background-position: 20%; }
+  .game_landing__container__newsletter__header,
+  .game_landing__container__newsletter__div {
+    max-width: 50%;
+    margin-inline-start: auto;
+    margin-inline-end: auto; }
+  .game_landing__container__newsletter__div__text {
+    padding-block-start: 60px;
+    padding-block-end: 40px; }
+  .game_landing__container__newsletter__div__email_form {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    max-width: 50%;
+    margin-inline-start: auto;
+    flex-wrap: nowrap; }
+  .game_landing__container__newsletter__div__email_label {
+    padding-inline-end: 17px; }
+  .game_landing__container__newsletter {
+    width: 100%;
+    padding-inline-end: 17px; }
+  .game_landing__container__newsletter__div__subscribe_button {
+    width: 75%; } }
 
 .game_landing__container__quotes {
   padding-block-start: 36px;
