--- a/scss/_about-gallery.scss
+++ b/scss/_about-gallery.scss
@@ -1,9 +1,10 @@
 @import "variable";
 
 .game_landing__container__gallery {
-    //background-image: url('../webroot/images/gallery-background-transparent.png'),
-    //    url('../images/bg-image-2.png');
-   // background-repeat: no-repeat;
+    // background-image: 
+    //     url('../images/bg-gradient-gallery.png'),
+    //     url('../images/bg-image-2.png');
+    // background-repeat: no-repeat;
     background-size: cover;
     padding-block-start: 19px;
     padding-block-end: 36px;
@@ -54,6 +55,60 @@
 .game_landing__container__gallery__lists_image {
     max-width: 100%;
     display: block;
+    border-radius: 2.34486px;
+}
+
+@media(min-width: 1200px) {
+    .game_landing__container__gallery {
+        background-size: cover;
+        padding-block-start: 256px;
+        padding-block-end: 36px;
+        padding-inline-start: 121px;
+    }
+
+    .game_landing__container__gallery__header {
+        max-width: 65%;
+    }
+
+    .game_landing__container__gallery__header__big_title {
+        margin-block-end: 0;
+    }
+
+    .game_landing__container__gallery__header__big_title {
+        max-width: 52%;
+    }
+
+    .game_landing__container__gallery_text_wrapper {
+        max-width: 50%;
+        margin-block-end: -530px;
+    }
+
+    .game_landing__container__gallery__game_about {
+        padding-inline-start: 188px;
+    }
+
+    .game_landing__container__gallery__lists {
+        position: relative;
+        z-index: -1;
+        max-width: 600px;
+        margin-inline-start: auto;
+    }
+
+    .game_landing__container__gallery__lists_2 {
+        position: absolute;
+        left: 14%;
+        top: 2%;
+        z-index: -1;
+        transform: scale(0.9);
+    }
+
+    .game_landing__container__gallery__lists_3 {
+        position: absolute;
+        left: 23%;
+        top: 9%;
+        z-index: -2;
+        transform: scale(0.8);
+    }
 }
 
 
