--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -38,6 +38,21 @@ h4 {
     color: #FFFFFF;
 }
 
+@media(min-width: 1200px) {
+    h3 {
+        font-size: 24px;
+        line-height: 24px;
+        letter-spacing: 2px;
+    }
+    
+    h4 {
+        font-size: 80px;
+        line-height: 80px;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+    }
+}
+
 li {
     list-style: none;
 }
