--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -243,6 +243,17 @@ h4 {
   text-transform: uppercase;
   color: #FFFFFF; }
 
+@media (min-width: 1200px) {
+  h3 {
+    font-size: 24px;
+    line-height: 24px;
+    letter-spacing: 2px; }
+  h4 {
+    font-size: 80px;
+    line-height: 80px;
+    letter-spacing: 3px;
+    text-transform: uppercase; } }
+
 li {
   list-style: none; }
 
@@ -484,7 +495,43 @@ body > [type="checkbox"]:checked ~ main {
 
 .game_landing__container__gallery__lists_image {
   max-width: 100%;
-  display: block; }
+  display: block;
+  border-radius: 2.34486px; }
+
+@media (min-width: 1200px) {
+  .game_landing__container__gallery {
+    background-size: cover;
+    padding-block-start: 256px;
+    padding-block-end: 36px;
+    padding-inline-start: 121px; }
+  .game_landing__container__gallery__header {
+    max-width: 65%; }
+  .game_landing__container__gallery__header__big_title {
+    margin-block-end: 0; }
+  .game_landing__container__gallery__header__big_title {
+    max-width: 52%; }
+  .game_landing__container__gallery_text_wrapper {
+    max-width: 50%;
+    margin-block-end: -530px; }
+  .game_landing__container__gallery__game_about {
+    padding-inline-start: 188px; }
+  .game_landing__container__gallery__lists {
+    position: relative;
+    z-index: -1;
+    max-width: 600px;
+    margin-inline-start: auto; }
+  .game_landing__container__gallery__lists_2 {
+    position: absolute;
+    left: 14%;
+    top: 2%;
+    z-index: -1;
+    transform: scale(0.9); }
+  .game_landing__container__gallery__lists_3 {
+    position: absolute;
+    left: 23%;
+    top: 9%;
+    z-index: -2;
+    transform: scale(0.8); } }
 
 .game_landing__container__features {
   background-image: url("../images/feature-background-semi-transparent.png"), url("../images/feature-background-image.png");
