webroot/css/index.css

--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -2,13 +2,18 @@
 
 .game_landing__container__features {
     background-image: 
-        url('../images/feature-background-semi-transparent.png'),
+        url('../images/bg-feature.png'),
         url('../images/feature-background-image.png');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: 30%;
     padding-block-start: 50px;
     margin-inline-start: -100px;
     padding-inline-end: 24px;
+}
+
+.game_landing__container__features__big_title {
+    margin-block-end: -15px;
 }
 
 .game_landing__container__features__subtitle {
