--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -534,12 +534,16 @@ body > [type="checkbox"]:checked ~ main {
     transform: scale(0.8); } }
 
 .game_landing__container__features {
-  background-image: url("../images/feature-background-semi-transparent.png"), url("../images/feature-background-image.png");
+  background-image: url("../images/bg-feature.png"), url("../images/feature-background-image.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: 30%;
   padding-block-start: 50px;
   margin-inline-start: -100px;
   padding-inline-end: 24px; }
+
+.game_landing__container__features__big_title {
+  margin-block-end: -15px; }
 
 .game_landing__container__features__subtitle {
   margin-block-end: -38px; }
@@ -817,6 +821,10 @@ summary::-webkit-details-marker {
   .game_landing__container__quotes__navigation__list:nth-of-type(3) {
     margin-inline-start: 193px; } }
 
+.game_landing__footer {
+  padding-inline-start: 21px;
+  padding-inline-end: 26px; }
+
 .game_landing__footer__logo {
   background-image: url("../images/game_landing_log.svg");
   background-repeat: no-repeat;
@@ -832,7 +840,8 @@ summary::-webkit-details-marker {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  flex-wrap: wrap; }
 
 .game_landing__footer__list__navigation__about {
   display: flex;
@@ -867,7 +876,9 @@ summary::-webkit-details-marker {
   margin-inline-start: -10px; }
 
 .game_landing__footer__list__navigation__social__link {
-  padding-inline-end: 60px; }
+  padding-inline-end: 60px;
+  display: flex;
+  flex-direction: row; }
 
 .game_landing__footer__list__navigation__license__copyright {
   font-size: 12px;
@@ -894,6 +905,18 @@ summary::-webkit-details-marker {
   border-inline-end: #FFFFFF solid 2px;
   padding-inline-end: 16px;
   padding-inline-start: 16px; }
+
+.game_landing__footer__list__navigation__social__link svg {
+  fill: white; }
+
+.game_landing__footer__list__navigation__social__link_facebook svg:hover {
+  fill: navy; }
+
+.game_landing__footer__list__navigation__social__link_twitter svg:hover {
+  fill: lightblue; }
+
+.game_landing__footer__list__navigation__social__link_twitch svg:hover {
+  fill: purple; }
 
 @media (min-width: 1200px) {
   .game_landing__footer {
